deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hedgehogdb
  labels:
    app.kubernetes.io/name: hedgehogdb
