deploy/k8s/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hedgehogdb
  namespace: hedgehogdb
  labels:
    app: hedgehogdb
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: hedgehogdb
